<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tvshow">TV Show</string>
    <string name="poster">Poster</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="duration">· %s</string>
    <string name="description">Description</string>
    <string name="no_internet_access">No Internet Access</string>
</resources>