...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivPoster"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:contentDescription="@string/poster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
